# SHMS

./: Client.c  README.md  server.c  test.conf
Master/: CMakeLists.txt  Makefile  Master  SHMS-Master.service  SHMS-master.init  Server.c  mainMaster.c  master.conf
Master/build_old/: Makefile
Master/include/: CreateConnect.h  LinkList.c  LinkList.h  dataTransmission.c  dataTransmission.h  getAllIP.c  getAllIP.h  getFromIP.c  getFromIP.h  getWarningInfo.h  lisenGetIP.c  lisenGetIP.h  mainMaster.h  masterClose.c  masterCommunication.c  masterConnect.c
Master/lib/: CMakeLists.txt
Master/lib/.clangd/index/: Write_Pi_Log.c.EF5F747C2B9D1E9F.idx  needHead.h.B913B135C705A962.idx
Master/lib/src/: Get_conf.c  StrtoInt.c
Master/src/: CreateConnect.c  LinkList.c  dataTransmission.c  getWarningInfo.c  masterConnect.c
Server/: CMakeLists.txt  Makefile  SHMS-Server.service  SHMS-server.init  Server  a.out  mainServer.c  server.conf
Server/build_old/: Makefile
Server/include/: ServerConnect.c  TCP_connect.c  dataTransmission.c  dataTransmission.h  getInfo.h  getScriptRunInfo.h  heartBeat.c  heartBeat.h  mainServer.h  runScriptAndSave.h  sendWarningInfo.h
Server/lib/.clangd/index/: StrtoInt.c.D18C44866E223DDB.idx  (+2 more)
Server/lib/include/: Get_conf.h  Write_Pi_Log.h
Server/script/: CPU_info.sh  Disk_info.sh  Malicious_ps_info.sh  Malicious_ps_info.sh~  Mem_info.sh  Sys_info.sh  User_info.sh  getLogHeadInfo.sh  run_Script_save.sh
Server/src/: ServerConnect.c  dataTransmission.c  getInfo.c  getScriptRunInfo.c  heartBeat.c  runScriptAndSave.c  sendWarningInfo.c
(+56 files in other folders)
